# Machine-Learning-Lab

./: .gitignore  Build.bat  Build.sh  CMakeLists.txt  CMakePresets.json  CreateDependancyGraph.ps1  Install.bat  Install.sh  LICENSE  Machine Learning Labs.sln  Machine-Learning-Labs.sln  config.json  vcpkg.json
Cleaner/: CMakeLists.txt  Cleaner.cpp  Cleaner.vcxproj  config.json
DependancyGraphMaker/: CMakeLists.txt  DependancyGraphMaker.cpp
Docs/: Goal.canvas  TODO.md
Docs/.obsidian/: workspace.json
ImNodes/: ImNodes.vcxitems  imnodes.cpp  imnodes.h  imnodes_internal.h
Implementations/Engines/DebugEngine/DebugEngine/: CMakeLists.txt  DebugEngine.cpp
Implementations/Engines/LossEngine/LossEngine/: CMakeLists.txt  LossEngine.cpp
Implementations/Engines/NetworkEngine/NetworkEngine/: CMakeLists.txt  NetworkEngine.cpp
Implementations/Util/: Exports.hpp
Implimentations/Engines/ActivationEngine/ActivationEngine/: ActivationEngine.cpp  ActivationEngine.vcxproj  ActivationEngine.vcxproj.filters  CMakeLists.txt
Implimentations/Engines/DynamicCodeExecutionEngine/DynamicCodeExecutionEngine/: CMakeLists.txt  DynamicCodeExecutionEngine.cpp  DynamicCodeExecutionEngine.vcxproj  DynamicCodeExecutionEngine.vcxproj.filters
Interfaces/Engines/ActivationEngine/ActivationEngineInterface/: ActivationEngineInterface.h  ActivationEngineInterface.hpp  ActivationEngineInterface.vcxitems  CMakeLists.txt
Interfaces/Engines/ActivationEngine/ActivationInterface/: ActivationInterface.cpp  ActivationInterface.hpp  CMakeLists.txt
Interfaces/Engines/DebugEngine/DebugEngineInterface/: CMakeLists.txt  DebugEngineInterface.hpp
Interfaces/Engines/DynamicCodeExecutionEngine/DynamicCodeExecutionEngineInterface/: CMakeLists.txt  DynamicCodeExecutionEngineInterface.cpp  DynamicCodeExecutionEngineInterface.h  DynamicCodeExecutionEngineInterface.hpp  DynamicCodeExecutionEngineInterface.vcxitems  DynamicCodeExecutionEngineInterface.vcxitems.filters
Interfaces/Engines/DynamicCodeExecutionEngine/LibraryInterface/: CMakeLists.txt  LibraryInterface.h  LibraryInterface.hpp  LibraryInterface.vcxitems
Interfaces/Engines/DynamicCodeExecutionEngine/PluginInterface/: CMakeLists.txt  PluginInterface.h  PluginInterface.hpp
Interfaces/Engines/DynamicCodeExecutionEngine/ScriptInterface/: CMakeLists.txt  ScriptInterface.h  ScriptInterface.hpp  ScriptInterface.vcxitems
Interfaces/Engines/GraphEngine/Attribute/: Attribute.hpp  CMakeLists.txt
Interfaces/Engines/GraphEngine/AttributeInterface/: AttributeInterface.hpp  CMakeLists.txt
Interfaces/Engines/GraphEngine/Edge/: CMakeLists.txt  Edge.cpp  Edge.hpp
Interfaces/Engines/GraphEngine/EdgeInterface/: CMakeLists.txt  EdgeInterface.cpp  EdgeInterface.h  EdgeInterface.hpp
Interfaces/Engines/GraphEngine/EdgeInterface/EdgeInterface/: EdgeInterface.cpp  EdgeInterface.h  EdgeInterface.vcxitems
Interfaces/Engines/GraphEngine/GraphEngineInterface/: CMakeLists.txt  GraphEngineInterface.h  GraphEngineInterface.hpp  GraphEngineInterface.vcxitems
Interfaces/Engines/GraphEngine/GraphInterface/: CMakeLists.txt  GraphInterface.cpp  GraphInterface.h  GraphInterface.hpp
Interfaces/Engines/GraphEngine/GraphInterface/GraphInterface/: GraphInterface.cpp  GraphInterface.h  GraphInterface.vcxitems
Interfaces/Engines/GraphEngine/NodeIOInterface/: CMakeLists.txt  NodeIOInterface.cpp  NodeIOInterface.h
Interfaces/Engines/GraphEngine/NodeInterface/: CMakeLists.txt  NodeInterface.cpp  NodeInterface.h  NodeInterface.hpp
Interfaces/Engines/NetworkEngine/LedgerInterface/: CMakeLists.txt  LedgerInterface.hpp
Interfaces/Engines/NetworkEngine/LedgerInterface/LedgerInterface/: LedgerInterface.h  LedgerInterface.vcxitems
Interfaces/Engines/NetworkEngine/NetworkEngineInterface/: CMakeLists.txt  NetworkEngineInterface.h  NetworkEngineInterface.hpp  NetworkEngineInterface.vcxitems
Interfaces/Engines/NetworkEngine/NetworkObjectInterface/: CMakeLists.txt  NetworkObjectInterface.hpp
Interfaces/Engines/UIEngine/UIEngineInterface/: CMakeLists.txt  UIEngineInterface.h  UIEngineInterface.hpp  UIEngineInterface.vcxitems
Interfaces/SerializableInterface/: CMakeLists.txt  SerializableInterface.hpp
Machine Learning Labs/: CMakeLists.txt  Convolution2DKernel.cl  Convolution3DKernel.cl  FullyConnectedLayerKernel.cl  Machine Learning Labs.cpp  Machine Learning Labs.vcxproj  Machine Learning Labs.vcxproj.filters  NodeEditor.json  NodeGraphConfig.json  Simple.json  imgui.ini
Machine Learning Labs Server/: CMakeLists.txt  Machine Learning Labs Server.cpp  Machine Learning Labs Server.vcxproj  Machine Learning Labs Server.vcxproj.filters  packages.config
Machine-Learning-Lab/: CMakeLists.txt  MLL_version.h.in  Machine-Learning-Lab.cpp  Machine-Learning-Lab.h
Machine-Learning-Lab-Server/: CMakeLists.txt  Machine-Learning-Labs-Server.cpp
Machine-Learning-Labs/: CMakeLists.txt  Machine-Learning-Labs.vcxproj  Machine-Learning-Labs.vcxproj.filters  NodeGraphConfig.json  imgui.ini
Machine-Learning-Labs-CrossPlatform-V2/: CMakeLists.txt  MLL_version.h.in  Machine-Learning-Labs-CrossPlatform-V2.cpp  Machine-Learning-Labs-CrossPlatform-V2.h
Machine-Learning-Labs-Server/: CMakeLists.txt  Config.json  Machine-Learning-Labs-Server.cpp  Machine-Learning-Labs-Server.vcxproj  Machine-Learning-Labs-Server.vcxproj.filters  ServerLedger.db
Machine-Learning-Labs-Server/Core/: APIEngine.exp  APIEngine.lib  ActivationEngine.exp  ActivationEngine.lib  DynamicCodeExecutionEngine.exp  DynamicCodeExecutionEngine.lib  GraphEngine.exp  GraphEngine.lib  LossEngine.exp  LossEngine.lib  NetworkEngine.exp  NetworkEngine.lib  UIEngine.exp  UIEngine.lib
Machine-Learning-Labs/Scripts/ChaiScript/Graph/Nodes/: ChaiNode.chai
Machine-Learning-Labs/Scripts/Lua/Losses/: MAE.lua
Machine-Learning-Labs/Themes/: Default.json
MnistDatabaseMaker/: CMakeLists.txt  MnistDatabaseMaker.cpp  MnistDatabaseMaker.vcxproj  MnistDatabaseMaker.vcxproj.filters  t10k-images.idx3-ubyte:Zone.Identifier  train-labels.idx1-ubyteZone.Identifier
Resources/Machine-Learning-Labs-CrossPlatform-V2/: Config.json  imgui.ini  (+3 more)
(+548 files in other folders)
