# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)

# Enable Hot Reload for MSVC compilers if supported.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

add_definitions(-w)

project ("Machine-Learning-Labs-CrossPlatform-V2")

set(INTERFACE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Interfaces/)
set(IMPLIMENTATIONS_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Implimentations/)
set(ENGINE_IN_PATH ${INTERFACE_PATH}Engines/)
set(ENGINE_IM_PATH ${IMPLIMENTATIONS_PATH}Engines/)

## Interfaces
add_subdirectory(${ENGINE_IN_PATH}DynamicCodeExecutionEngine/Languages/LanguageInterface/ ${CMAKE_BINARY_DIR}/Interfaces/LanguageInterface)
add_subdirectory(${ENGINE_IN_PATH}NetworkEngine/NetworkObjectInterface/ ${CMAKE_BINARY_DIR}/Interfaces/NetworkObjectInterface)

add_subdirectory(${ENGINE_IN_PATH}DynamicCodeExecutionEngine/ScriptInterface/ ${CMAKE_BINARY_DIR}/Interfaces/ScriptInterface)
add_subdirectory(${ENGINE_IN_PATH}DynamicCodeExecutionEngine/LibraryInterface/ ${CMAKE_BINARY_DIR}/Interfaces/LibraryInterface)
add_subdirectory(${ENGINE_IN_PATH}DynamicCodeExecutionEngine/PluginInterface/ ${CMAKE_BINARY_DIR}/Interfaces/PluginInterface)
#add_subdirectory(${ENGINE_IN_PATH}DynamicCodeExecutionEngine/KernelInterface/ ${CMAKE_BINARY_DIR}/Interfaces/KernelInterface)
add_subdirectory(${INTERFACE_PATH}SerializableInterface/ ${CMAKE_BINARY_DIR}/Interfaces/SerializableInterface)
add_subdirectory(${ENGINE_IN_PATH}EngineInterface/ ${CMAKE_BINARY_DIR}/Interfaces/EngineInterface)
add_subdirectory(${ENGINE_IN_PATH}NetworkEngine/LedgerInterface/ ${CMAKE_BINARY_DIR}/Interfaces/LedgerInterface)
add_subdirectory(${ENGINE_IN_PATH}NetworkEngine/Client/ClientInterface/ ${CMAKE_BINARY_DIR}/Interfaces/ClientInterface)
add_subdirectory(${ENGINE_IN_PATH}NetworkEngine/Server/ServerInterface/ ${CMAKE_BINARY_DIR}/Interfaces/ServerInterface)

add_subdirectory(${ENGINE_IN_PATH}DynamicCodeExecutionEngine/DynamicCodeExecutionEngineInterface/ ${CMAKE_BINARY_DIR}/Interfaces/DynamicCodeExecutionEngineInterface)
add_subdirectory(${ENGINE_IN_PATH}UIEngine/UIEngineInterface/ ${CMAKE_BINARY_DIR}/Interfaces/UIEngineInterface)
add_subdirectory(${ENGINE_IN_PATH}NetworkEngine/NetworkEngineInterface/ ${CMAKE_BINARY_DIR}/Interfaces/NetworkEngineInterface)
add_subdirectory(${ENGINE_IN_PATH}LossEngine/LossInterface/ ${CMAKE_BINARY_DIR}/Interfaces/LossInterface)
add_subdirectory(${ENGINE_IN_PATH}ActivationEngine/ActivationInterface/ ${CMAKE_BINARY_DIR}/Interfaces/ActivationInterface)
add_subdirectory(${ENGINE_IN_PATH}GraphEngine/GraphInterface/ ${CMAKE_BINARY_DIR}/Interfaces/GraphInterface)
add_subdirectory(${ENGINE_IN_PATH}GraphEngine/NodeIOInterface/ ${CMAKE_BINARY_DIR}/Interfaces/NodeIOInterface)
add_subdirectory(${ENGINE_IN_PATH}GraphEngine/EdgeInterface/ ${CMAKE_BINARY_DIR}/Interfaces/EdgeInterface)
add_subdirectory(${ENGINE_IN_PATH}GraphEngine/AttributeInterface/ ${CMAKE_BINARY_DIR}/Interfaces/AttributeInterface)
add_subdirectory(${ENGINE_IN_PATH}GraphEngine/NodeInterface/ ${CMAKE_BINARY_DIR}/Interfaces/NodeInterface)
#add_subdirectory(${ENGINE_IN_PATH}APIEngine/APIEngineInterface/ ${CMAKE_BINARY_DIR}/Interfaces/APIEngineInterface)

add_subdirectory(${ENGINE_IN_PATH}LossEngine/LossEngineInterface/ ${CMAKE_BINARY_DIR}/Interfaces/LossEngineInterface)
add_subdirectory(${ENGINE_IN_PATH}ActivationEngine/ActivationEngineInterface/ ${CMAKE_BINARY_DIR}/Interfaces/ActivationEngineInterface)
add_subdirectory(${ENGINE_IN_PATH}GraphEngine/GraphEngineInterface/ ${CMAKE_BINARY_DIR}/Interfaces/GraphEngineInterface)
add_subdirectory(${ENGINE_IN_PATH}GraphEngine/SorterInterface/ ${CMAKE_BINARY_DIR}/Interfaces/SorterInterface)

## Implementations
add_subdirectory(${ENGINE_IM_PATH}/DynamicCodeExecutionEngine/DynamicCodeExecutionEngine/ ${CMAKE_BINARY_DIR}/Implimentations/DynamicCodeExecutionEngine)
add_subdirectory(${ENGINE_IM_PATH}/UIEngine/UIEngine/ ${CMAKE_BINARY_DIR}/Implimentations/UIEngine)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/GraphEngine/ ${CMAKE_BINARY_DIR}/Implimentations/GraphEngine)
add_subdirectory(${ENGINE_IM_PATH}/ActivationEngine/ActivationEngine/ ${CMAKE_BINARY_DIR}/Implimentations/ActivationEngine)
add_subdirectory(${ENGINE_IM_PATH}/LossEngine/LossEngine/ ${CMAKE_BINARY_DIR}/Implimentations/LossEngine)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Sorters/DefaultSorter/ ${CMAKE_BINARY_DIR}/Implimentations/DefaultSorter)
add_subdirectory(${ENGINE_IM_PATH}/NetworkEngine/NetworkEngine/ ${CMAKE_BINARY_DIR}/Implimentations/NetworkEngine)

add_subdirectory(${ENGINE_IM_PATH}/ActivationEngine/Activations/LeakyReLUActivation/ ${CMAKE_BINARY_DIR}/Implimentations/Activations/LeakyReLUActivation/)
add_subdirectory(${ENGINE_IM_PATH}/ActivationEngine/Activations/ReLUActivation/ ${CMAKE_BINARY_DIR}/Implimentations/Activations/ReLUActivation/)
add_subdirectory(${ENGINE_IM_PATH}/ActivationEngine/Activations/SigmoidActivation/ ${CMAKE_BINARY_DIR}/Implimentations/Activations/SigmoidActivation/)
add_subdirectory(${ENGINE_IM_PATH}/ActivationEngine/Activations/ScriptActivation/ ${CMAKE_BINARY_DIR}/Implimentations/Activations/ScriptActivation/)

add_subdirectory(${ENGINE_IM_PATH}/LossEngine/Losses/MSELoss/ ${CMAKE_BINARY_DIR}/Implimentations/Losses/MSELoss/)
add_subdirectory(${ENGINE_IM_PATH}/LossEngine/Losses/ScriptLoss/ ${CMAKE_BINARY_DIR}/Implimentations/Losses/ScriptLoss/)

#add_subdirectory(${ENGINE_IM_PATH}/DynamicCodeExecutionEngine/Languages/Chai_Language/ ${CMAKE_BINARY_DIR}/Languages/Chai_Language/)
#add_subdirectory(${ENGINE_IM_PATH}/DynamicCodeExecutionEngine/Languages/JavaScript_Language/ ${CMAKE_BINARY_DIR}/Languages/JavaScript_Language/)
#add_subdirectory(${ENGINE_IM_PATH}/DynamicCodeExecutionEngine/Languages/Java_Language/ ${CMAKE_BINARY_DIR}/Languages/Java_Language/)
add_subdirectory(${ENGINE_IM_PATH}/DynamicCodeExecutionEngine/Languages/Lua_Language/ ${CMAKE_BINARY_DIR}/Implimentations/Languages/Lua_Language/)
#add_subdirectory(${ENGINE_IM_PATH}/DynamicCodeExecutionEngine/Languages/Python_Language/ ${CMAKE_BINARY_DIR}/Languages/Python_Language/)

add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/ViewNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/ViewNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/UniqueNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/UniqueNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/SubGraphNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/SubGraphNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/SelfAttentionLayerNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/SelfAttentionLayerNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/ScriptNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/ScriptNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/RecurrentNetworkNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/RecurrentNetworkNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/RecurrentLayerNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/RecurrentLayerNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/PositionalEncodingNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/PositionalEncodingNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/OneHotNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/OneHotNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/NormalizeNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/NormalizeNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/MathNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/MathNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/LayerNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/LayerNode/)
#if(WIN32)
#	add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/KinectNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/KinectNode/)
#endif()
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/ImageNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/ImageNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/ImageLossNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/ImageLossNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/FullyConnectedNetworkNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/FullyConnectedNetworkNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/FlattenNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/FlattenNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/FileVisualizationNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/FileVisualizationNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/DictionaryNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/DictionaryNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/DelayOutputNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/DelayOutputNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/VectorToTensorNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/DataToTensorNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/VectorToMatrixNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/DataToMatrixNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/DatabaseInputNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/DatabaseInputNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/Convolution3DNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/Convolution3DNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/Convolution2DNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/Convolution2DNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/Convolution2DNetworkNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/Convolution2DNetworkNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/ConversionNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/ConversionNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/ControllerNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/ControllerNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/ValueNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/ValueNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/LossNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/LossNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/LossDataSetNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/LossDataSetNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/InputDataSetNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/InputDataSetNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/ColumnNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/ColumnNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/AtIndexNode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/AtIndexNode/)
#add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/APINode/ ${CMAKE_BINARY_DIR}/Implimentations/Nodes/APINode/)

add_subdirectory("Machine-Learning-Labs-CrossPlatform-V2")

add_subdirectory(Cleaner)

add_subdirectory(DependancyGraphMaker)