# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)

# Enable Hot Reload for MSVC compilers if supported.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

add_definitions(-w -fcompare-debug-second)
add_definitions(-fPIC)
project ("Machine-Learning-Lab")

set(INTERFACE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Interfaces/)
set(IMPLEMENTATIONS_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Implementations/)
set(ENGINE_IN_PATH ${INTERFACE_PATH}Engines/)
set(ENGINE_IM_PATH ${IMPLEMENTATIONS_PATH}Engines/)

## Interfaces ${CMAKE_SOURCE_DIR}/Interfaces/EngineInterface
add_subdirectory(${ENGINE_IN_PATH}DynamicCodeExecutionEngine/Languages/LanguageInterface/ ${CMAKE_BINARY_DIR}/Interfaces/LanguageInterface)
add_subdirectory(${ENGINE_IN_PATH}NetworkEngine/NetworkObjectInterface/ ${CMAKE_BINARY_DIR}/Interfaces/NetworkObjectInterface)

add_subdirectory(${ENGINE_IN_PATH}DynamicCodeExecutionEngine/ScriptInterface/ ${CMAKE_BINARY_DIR}/Interfaces/ScriptInterface)
add_subdirectory(${ENGINE_IN_PATH}DynamicCodeExecutionEngine/LibraryInterface/ ${CMAKE_BINARY_DIR}/Interfaces/LibraryInterface)
add_subdirectory(${ENGINE_IN_PATH}DynamicCodeExecutionEngine/PluginInterface/ ${CMAKE_BINARY_DIR}/Interfaces/PluginInterface)
#add_subdirectory(${ENGINE_IN_PATH}DynamicCodeExecutionEngine/KernelInterface/ ${CMAKE_BINARY_DIR}/Interfaces/KernelInterface)
add_subdirectory(${INTERFACE_PATH}SerializableInterface/ ${CMAKE_BINARY_DIR}/Interfaces/SerializableInterface)
add_subdirectory(${ENGINE_IN_PATH}EngineInterface/ ${CMAKE_BINARY_DIR}/Interfaces/EngineInterface)
add_subdirectory(${ENGINE_IN_PATH}NetworkEngine/LedgerInterface/ ${CMAKE_BINARY_DIR}/Interfaces/LedgerInterface)
add_subdirectory(${ENGINE_IN_PATH}NetworkEngine/Client/ClientInterface/ ${CMAKE_BINARY_DIR}/Interfaces/ClientInterface)
add_subdirectory(${ENGINE_IN_PATH}NetworkEngine/Server/ServerInterface/ ${CMAKE_BINARY_DIR}/Interfaces/ServerInterface)

add_subdirectory(${ENGINE_IN_PATH}DynamicCodeExecutionEngine/DynamicCodeExecutionEngineInterface/ ${CMAKE_BINARY_DIR}/Interfaces/DynamicCodeExecutionEngineInterface)
add_subdirectory(${ENGINE_IN_PATH}UIEngine/UIEngineInterface/ ${CMAKE_BINARY_DIR}/Interfaces/UIEngineInterface)
add_subdirectory(${ENGINE_IN_PATH}NetworkEngine/NetworkEngineInterface/ ${CMAKE_BINARY_DIR}/Interfaces/NetworkEngineInterface)
add_subdirectory(${ENGINE_IN_PATH}LossEngine/LossInterface/ ${CMAKE_BINARY_DIR}/Interfaces/LossInterface)
add_subdirectory(${ENGINE_IN_PATH}ActivationEngine/ActivationInterface/ ${CMAKE_BINARY_DIR}/Interfaces/ActivationInterface)
add_subdirectory(${ENGINE_IN_PATH}GraphEngine/GraphInterface/ ${CMAKE_BINARY_DIR}/Interfaces/GraphInterface)
add_subdirectory(${ENGINE_IN_PATH}GraphEngine/EdgeInterface/ ${CMAKE_BINARY_DIR}/Interfaces/EdgeInterface)
add_subdirectory(${ENGINE_IN_PATH}GraphEngine/AttributeInterface/ ${CMAKE_BINARY_DIR}/Interfaces/AttributeInterface)
add_subdirectory(${ENGINE_IN_PATH}GraphEngine/NodeInterface/ ${CMAKE_BINARY_DIR}/Interfaces/NodeInterface)
#add_subdirectory(${ENGINE_IN_PATH}APIEngine/APIEngineInterface/ ${CMAKE_BINARY_DIR}/Interfaces/APIEngineInterface)
add_subdirectory(${ENGINE_IN_PATH}DebugEngine/DebugEngineInterface/ ${CMAKE_BINARY_DIR}/Interfaces/DebugEngineInterface)

add_subdirectory(${ENGINE_IN_PATH}LossEngine/LossEngineInterface/ ${CMAKE_BINARY_DIR}/Interfaces/LossEngineInterface)
add_subdirectory(${ENGINE_IN_PATH}ActivationEngine/ActivationEngineInterface/ ${CMAKE_BINARY_DIR}/Interfaces/ActivationEngineInterface)
add_subdirectory(${ENGINE_IN_PATH}GraphEngine/GraphEngineInterface/ ${CMAKE_BINARY_DIR}/Interfaces/GraphEngineInterface)
add_subdirectory(${ENGINE_IN_PATH}GraphEngine/SorterInterface/ ${CMAKE_BINARY_DIR}/Interfaces/SorterInterface)

## Implementationss
add_subdirectory(${ENGINE_IM_PATH}/DynamicCodeExecutionEngine/DynamicCodeExecutionEngine/ ${CMAKE_BINARY_DIR}/Implementations/Engines/DynamicCodeExecutionEngine)
add_subdirectory(${ENGINE_IM_PATH}/UIEngine/UIEngine/ ${CMAKE_BINARY_DIR}/Implementations/Engines/UIEngine)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/GraphEngine/ ${CMAKE_BINARY_DIR}/Implementations/Engines/GraphEngine)
add_subdirectory(${ENGINE_IM_PATH}/ActivationEngine/ActivationEngine/ ${CMAKE_BINARY_DIR}/Implementations/Engines/ActivationEngine)
add_subdirectory(${ENGINE_IM_PATH}/LossEngine/LossEngine/ ${CMAKE_BINARY_DIR}/Implementations/Engines/LossEngine)
add_subdirectory(${ENGINE_IM_PATH}/NetworkEngine/NetworkEngine/ ${CMAKE_BINARY_DIR}/Implementations/Engines/NetworkEngine)
add_subdirectory(${ENGINE_IM_PATH}/DebugEngine/DebugEngine/ ${CMAKE_BINARY_DIR}/Implementations/Engines/DebugEngine)

add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Sorters/DefaultSorter/ ${CMAKE_BINARY_DIR}/Implementations/Sorters/DefaultSorter)

add_subdirectory(${ENGINE_IM_PATH}/ActivationEngine/Activations/LeakyReLUActivation/ ${CMAKE_BINARY_DIR}/Implementations/Activations/LeakyReLUActivation/)
add_subdirectory(${ENGINE_IM_PATH}/ActivationEngine/Activations/ReLUActivation/ ${CMAKE_BINARY_DIR}/Implementations/Activations/ReLUActivation/)
add_subdirectory(${ENGINE_IM_PATH}/ActivationEngine/Activations/SigmoidActivation/ ${CMAKE_BINARY_DIR}/Implementations/Activations/SigmoidActivation/)
add_subdirectory(${ENGINE_IM_PATH}/ActivationEngine/Activations/ScriptActivation/ ${CMAKE_BINARY_DIR}/Implementations/Activations/ScriptActivation/)

add_subdirectory(${ENGINE_IM_PATH}/LossEngine/Losses/MSELoss/ ${CMAKE_BINARY_DIR}/Implementations/Losses/MSELoss/)
add_subdirectory(${ENGINE_IM_PATH}/LossEngine/Losses/ScriptLoss/ ${CMAKE_BINARY_DIR}/Implementations/Losses/ScriptLoss/)

#add_subdirectory(${ENGINE_IM_PATH}/DynamicCodeExecutionEngine/Languages/Chai_Language/ ${CMAKE_BINARY_DIR}/Languages/Chai_Language/)
#add_subdirectory(${ENGINE_IM_PATH}/DynamicCodeExecutionEngine/Languages/JavaScript_Language/ ${CMAKE_BINARY_DIR}/Languages/JavaScript_Language/)
#add_subdirectory(${ENGINE_IM_PATH}/DynamicCodeExecutionEngine/Languages/Java_Language/ ${CMAKE_BINARY_DIR}/Languages/Java_Language/)
add_subdirectory(${ENGINE_IM_PATH}/DynamicCodeExecutionEngine/Languages/Lua_Language/ ${CMAKE_BINARY_DIR}/Implementations/Languages/Lua_Language/)
#add_subdirectory(${ENGINE_IM_PATH}/DynamicCodeExecutionEngine/Languages/Python_Language/ ${CMAKE_BINARY_DIR}/Languages/Python_Language/)

add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/ViewNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/ViewNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/UniqueNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/UniqueNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/SubGraphNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/SubGraphNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/SelfAttentionLayerNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/SelfAttentionLayerNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/ScriptNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/ScriptNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/RecurrentNetworkNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/RecurrentNetworkNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/RecurrentLayerNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/RecurrentLayerNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/PositionalEncodingNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/PositionalEncodingNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/OneHotNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/OneHotNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/NormalizeNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/NormalizeNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/MathNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/MathNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/LayerNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/LayerNode/)
#if(WIN32)
#	add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/KinectNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/KinectNode/)
#endif()
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/ImageNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/ImageNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/ImageLossNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/ImageLossNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/FullyConnectedNetworkNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/FullyConnectedNetworkNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/FlattenNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/FlattenNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/FileVisualizationNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/FileVisualizationNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/DictionaryNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/DictionaryNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/DelayOutputNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/DelayOutputNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/VectorToTensorNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/DataToTensorNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/VectorToMatrixNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/DataToMatrixNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/DatabaseInputNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/DatabaseInputNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/Convolution3DNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/Convolution3DNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/Convolution2DNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/Convolution2DNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/Convolution2DNetworkNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/Convolution2DNetworkNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/ConversionNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/ConversionNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/ControllerNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/ControllerNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/ValueNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/ValueNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/LossNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/LossNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/LossDataSetNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/LossDataSetNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/InputDataSetNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/InputDataSetNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/ColumnNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/ColumnNode/)
add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/AtIndexNode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/AtIndexNode/)
#add_subdirectory(${ENGINE_IM_PATH}/GraphEngine/Nodes/APINode/ ${CMAKE_BINARY_DIR}/Implementations/Nodes/APINode/)

add_subdirectory(${PROJECT_NAME})

add_subdirectory(Cleaner)

add_subdirectory(DependancyGraphMaker)